@@ -6,7 +6,7 @@ plugins {
 	kotlin("plugin.serialization") version "1.9.24"
 }
 
-group = "com.ciandt"
+group = "com.eds"
 version = "0.0.1-SNAPSHOT"
 
 
@@ -21,15 +21,17 @@ repositories {
 }
 
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-validation")
-	implementation("org.springframework.boot:spring-boot-starter-web")
-	implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
-	implementation("org.jetbrains.kotlin:kotlin-reflect")
-	implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
-	implementation("io.lettuce:lettuce-core:6.4.0.M1")
+	implementation("org.springframework.boot:spring-boot-starter")
+    implementation("org.springframework.boot:spring-boot-starter-data-redis")
+    implementation("org.springframework.boot:spring-boot-starter-json")
+
+	implementation("com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2")
+
+	implementation("org.springframework.boot:spring-boot-starter-jdbc")
     implementation("net.snowflake:snowflake-jdbc:3.16.1")
-	implementation("javax.annotation:javax.annotation-api:1.3.2")
-    
+
+	implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
+	
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
@@ -43,13 +45,4 @@ kotlin {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
-}
-
-tasks.named<JavaExec>("bootRun") {
-    jvmArgs = listOf(
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED"
-    )
 }
